[package]
name = "oxfmt"
version = "0.60.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "oxfmt"
path = "src/main.rs"
test = false
doctest = false
# On wasm, bin and cdylib would both emit `oxfmt.wasm` (a filename collision), and
# the napi glue would pick up the non-reactor bin module, which hangs at init.
# Wasm builds pass `--no-default-features --features napi` to skip the bin target.
required-features = ["binary"]

[dependencies]
oxc_allocator = { workspace = true, features = ["pool"] }
oxc_config = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_formatter = { workspace = true }
oxc_formatter_core = { workspace = true }
oxc_formatter_css = { workspace = true }
oxc_formatter_graphql = { workspace = true }
oxc_formatter_json = { workspace = true }
oxc_napi = { workspace = true }
oxc_span = { workspace = true }

bpaf = { workspace = true, features = ["autocomplete", "bright-color", "derive"] }
cow-utils = { workspace = true }
editorconfig-parser = { workspace = true }
fast-glob = { workspace = true }
ignore = { workspace = true, features = ["simd-accel"] }
json-strip-comments = { workspace = true }
miette = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
simdutf8 = { workspace = true }
sort-package-json = { workspace = true }
oxc-toml = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [] } # Omit the `regex` feature

# NAPI dependencies (conditional on napi feature)
napi = { workspace = true, features = ["async", "serde-json"], optional = true }
napi-derive = { workspace = true, optional = true }

# LSP is not supported on wasm, and `tokio` only supports the current-thread runtime there
# (the base `tokio` features above are the wasm-compatible subset)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
oxc_language_server = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-lsp-server = { workspace = true, features = ["proposed"] }

[target.'cfg(target_family = "wasm")'.dependencies]
futures = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(not(any(target_os = "linux", target_os = "freebsd", target_arch = "arm", target_arch = "riscv64", target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit"] }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64"), not(target_arch = "riscv64")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
  "no_opt_arch",
] }

[features]
default = ["napi", "binary"]
binary = []
napi = ["dep:napi", "dep:napi-derive"]
allocator = ["dep:mimalloc-safe"]
detect_code_removal = ["oxc_formatter/detect_code_removal"]
