[package]
name = "oxlint"
version = "1.33.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "oxlint"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
oxc_allocator = { workspace = true, features = ["fixed_size"] }
oxc_ast_visit = { workspace = true, features = ["serialize"] }
oxc_diagnostics = { workspace = true }
oxc_language_server = { workspace = true, features = ["linter"] }
oxc_linter = { workspace = true }
oxc_napi = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }

bpaf = { workspace = true, features = ["autocomplete", "bright-color", "derive"] }
cow-utils = { workspace = true }
ignore = { workspace = true, features = ["simd-accel"] }
miette = { workspace = true }
napi = { workspace = true, features = ["async"], optional = true }
napi-derive = { workspace = true, optional = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simdutf8 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-std", "macros"] }
tracing-subscriber = { workspace = true, features = [] } # Omit the `regex` feature

[target.'cfg(not(any(target_os = "linux", target_os = "freebsd", target_arch = "arm", target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit"] }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit", "local_dynamic_tls"] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit", "local_dynamic_tls", "no_opt_arch"] }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
lazy-regex = { workspace = true }

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]
allocator = ["dep:mimalloc-safe"]
force_test_reporter = ["oxc_linter/force_test_reporter"]
