[package]
name = "oxc_allocator"
version = "0.32.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
allocator-api2 = { workspace = true }
bump-scope = { workspace = true }

serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bump-scope = { workspace = true, features = ["serde"] }

[features]
serialize = ["dep:serde", "bump-scope/serde"]
