[package]
name = "oxc_allocator"
version = "0.107.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = true

[dependencies]
oxc_ast_macros = { workspace = true, optional = true }
oxc_data_structures = { workspace = true, features = ["assert_unchecked", "stack"] }
oxc_estree = { workspace = true, optional = true }

allocator-api2 = { workspace = true }
bumpalo = { workspace = true, features = ["allocator-api2", "collections"] }
hashbrown = { workspace = true, default-features = false, features = [
  "inline-more",
  "allocator-api2",
] }
rustc-hash = { workspace = true }

serde = { workspace = true, optional = true }

[dev-dependencies]
oxc_estree = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
bitset = []
fixed_size = ["from_raw_parts", "pool", "dep:oxc_ast_macros"]
from_raw_parts = []
pool = []
serialize = ["dep:serde", "oxc_estree/serialize"]
track_allocations = []
disable_track_allocations = []
