[package]
name = "oxc_allocator"
version = "0.125.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[[test]]
name = "bump_try_alloc"
path = "tests/bump_try_alloc.rs"
harness = false

[lints]
workspace = true

[lib]
doctest = true

[dependencies]
oxc_ast_macros = { workspace = true, optional = true }
oxc_data_structures = { workspace = true, features = ["assert_unchecked", "stack"] }
oxc_estree = { workspace = true, optional = true }

allocator-api2 = { workspace = true }
hashbrown = { workspace = true, default-features = false, features = [
  "inline-more",
  "allocator-api2",
] }
rustc-hash = { workspace = true }

serde = { workspace = true, optional = true }

[dev-dependencies]
oxc_estree = { workspace = true, features = ["serialize"] }
quickcheck = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Enable `testing` feature in tests and doctests.
# Allows doctests to use `bump` module without exposing it publicly.
oxc_allocator = { path = ".", features = ["testing"] }

[features]
bitset = []
fixed_size = ["from_raw_parts", "pool", "dep:oxc_ast_macros"]
from_raw_parts = []
pool = []
serialize = ["dep:serde", "oxc_estree/serialize"]
track_allocations = []
disable_track_allocations = []
# Only for use in tests
testing = []
