[package]
name = "oxc_aria_query"
version = "0.95.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
phf = { workspace = true, features = ["macros"] }

[lints]
workspace = true
