[package]
name                  = "oxc_ast_lower"
version               = "0.0.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[features]
default = []
serde   = ["dep:serde", "oxc_hir/serde", "oxc_syntax/serde"]

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast       = { workspace = true }
oxc_hir       = { workspace = true }
oxc_span      = { workspace = true }
oxc_syntax    = { workspace = true }

bitflags      = { workspace = true }
num-bigint    = { workspace = true }
ordered-float = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }

[dev_dependencies]
oxc_allocator = { workspace = true }
oxc_parser    = { workspace = true }
oxc_hir       = { workspace = true, features = ["serde"] }
serde_json    = { workspace = true }
