[package]
name                  = "oxc_ast_lower"
version               = "0.0.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast       = { workspace = true }
oxc_hir       = { workspace = true }
oxc_span      = { workspace = true }
oxc_semantic  = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stacker = { workspace = true }

[dev_dependencies]
oxc_allocator = { workspace = true }
oxc_parser    = { workspace = true }
oxc_hir       = { workspace = true, features = ["serde"] }
serde_json    = { workspace = true }
