[package]
name                   = "oxc_ast_macros"
version                = "0.23.1"
publish                = true
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true
include                = ["/src"]

[lints]
workspace = true

[lib]
proc-macro = true
doctest    = false

[dependencies]
quote       = { workspace = true }
syn         = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
