[package]
name = "oxc_ast_visit"
version = "0.81.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_data_structures = { workspace = true, features = ["pointer_ext"], optional = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

[features]
default = []
serialize = [
  "oxc_allocator/serialize",
  "oxc_ast/serialize",
  "oxc_data_structures",
  "oxc_span/serialize",
  "oxc_syntax/serialize",
]
# Only for conformance tests
conformance = []
