[package]
name = "oxc_ast_visit"
version = "0.140.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

[dev-dependencies]
# Catch usage of old `AstBuilder` APIs in tests, without affecting downstream consumers.
# If we enabled `disable_old_builder` feature in main dependency, feature unification would
# cause it to be activated for `oxc_ast` for the user too.
oxc_ast = { workspace = true, features = ["disable_old_builder"] }

[features]
default = []
serialize = [
  "oxc_allocator/serialize",
  "oxc_ast/serialize",
  "oxc_span/serialize",
  "oxc_syntax/serialize",
]
# Only for conformance tests
conformance = []
