[package]
name                   = "oxc_cfg"
version                = "0.22.0"
publish                = true
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true
include                = ["/src"]

[lints]
workspace = true

[lib]
test    = false
doctest = false

[dependencies]
oxc_syntax = { workspace = true }

itertools  = { workspace = true }
bitflags   = { workspace = true }
petgraph   = { workspace = true }
rustc-hash = { workspace = true }
