[package]
name = "oxc_cfg"
version = "0.31.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
oxc_index = { workspace = true }
oxc_syntax = { workspace = true }

bitflags = { workspace = true }
itertools = { workspace = true }
nonmax = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
