# oxc_checker
#
# Experimental eager TypeScript type checker built on isolated declarations.
# See DESIGN.md for the architecture.

[package]
name = "oxc_checker"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Experimental eager TypeScript type checker built on isolated declarations"

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_isolated_declarations = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

oxc_resolver = { workspace = true }

json-strip-comments = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
