[package]
name = "oxc_checker_host"
version = "0.115.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_types = { workspace = true }
