[package]
name                   = "oxc_cli"
version                = "0.0.0"
publish                = false
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "oxc_cli"
path = "src/main.rs"
test = false

[[bin]]
name = "oxlint"
path = "src/lint/main.rs"
test = false

[[bin]]
name = "oxformat"
path = "src/format/main.rs"
test = false

[dependencies]
oxc_allocator   = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_linter      = { workspace = true }
oxc_parser      = { workspace = true }
oxc_prettier    = { workspace = true }
oxc_span        = { workspace = true }

ignore             = { workspace = true, features = ["simd-accel"] }
miette             = { workspace = true }
tempfile           = { workspace = true }
rayon              = { workspace = true }
bpaf               = { workspace = true, features = ["derive", "autocomplete", "bright-color"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true }
glob     = { workspace = true }
