[package]
name                   = "oxc_codegen"
version                = "0.23.1"
publish                = true
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true
include                = ["/examples", "/src"]

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_ast       = { workspace = true }
oxc_span      = { workspace = true }
oxc_allocator = { workspace = true }
oxc_syntax    = { workspace = true, features = ["to_js_string"] }
oxc_sourcemap = { workspace = true }
oxc_mangler   = { workspace = true }
oxc_index     = { workspace = true }

bitflags   = { workspace = true }
nonmax     = { workspace = true }
once_cell  = { workspace = true }
daachorse  = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
oxc_parser = { workspace = true }
base64     = { workspace = true }
pico-args  = { workspace = true }
insta      = { workspace = true }
