[package]
name = "oxc_data_structures"
version = "0.95.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = true
# Doctests must be enabled for this crate as they are used to run compilation failure tests
doctest = true

[dependencies]
ropey = { workspace = true, optional = true }

[features]
default = []
all = ["assert_unchecked", "box_macros", "code_buffer", "inline_string", "rope", "slice_iter", "stack"]
assert_unchecked = []
box_macros = []
code_buffer = ["assert_unchecked"]
inline_string = ["assert_unchecked"]
rope = ["dep:ropey"]
slice_iter = ["assert_unchecked"]
stack = []
