[package]
name = "oxc_data_structures"
version = "0.140.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = true
# Doctests must be enabled for this crate as they are used to run compilation failure tests
doctest = true

[dependencies]
oxc_index = { workspace = true, optional = true }

pastey = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }

[features]
default = []
all = [
  "assert_unchecked",
  "box_macros",
  "branch_hints",
  "code_buffer",
  "fieldless_enum",
  "inline_string",
  "multi_vec",
  "non_null",
  "rope",
  "slice_iter",
  "stack",
  "str",
  "string_ext",
  "types",
]
assert_unchecked = []
box_macros = []
branch_hints = []
code_buffer = ["assert_unchecked"]
fieldless_enum = []
inline_string = ["assert_unchecked"]
multi_vec = ["assert_unchecked", "str", "dep:oxc_index", "dep:pastey"]
non_null = []
rope = ["dep:ropey"]
slice_iter = ["assert_unchecked"]
stack = []
str = []
string_ext = ["assert_unchecked"]
types = []
