[package]
name = "oxc_diagnostics"
version = "0.62.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
miette = { workspace = true }

oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
