[package]
name = "oxc_diagnostics"
version = "0.89.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
cow-utils = { workspace = true }
miette = { workspace = true }
percent-encoding = { workspace = true }
